--- a/MW-All-Matches.html
+++ b/MW-All-Matches.html
@@ -171,7 +171,7 @@
     <div class="u-clearfix u-sheet u-sheet-1"><span
         class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" onclick="history.back()"><img
           src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
-      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;"><b>EURO HANDICAP - List of all matches
+      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;"><b>MARGIN WINS - List of all matches
           played</b></h4>
       <!-- <h3 class="u-text u-text-default u-text-1">Team Name</h3> -->
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 30px;">
