--- a/MW-All-Teams.html
+++ b/MW-All-Teams.html
@@ -161,7 +161,7 @@
     <div class="u-clearfix u-sheet u-sheet-1"><span
         class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" onclick="history.back()"><img
           src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
-      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;">EURO HANDICAP - List of all Teams</h4>
+      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;">MARGIN WINS - List of all Teams</h4>
       <p class="u-text u-text-default u-text-1" style="text-shadow: none;">Active Teams</p>
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
         <table class="u-table-entity" id="ehActiveTeamsTable">
