fix margin wins id

--- a/MW-All-Matches.html
+++ b/MW-All-Matches.html
@@ -14,7 +14,7 @@
   <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <script type="text/javascript">
-    var currentStrategy = MARGIN_WINS_ID;
+    var currentStrategy = 2;
   </script>
         <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
         <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
