--- a/MW-All-Teams.html
+++ b/MW-All-Teams.html
@@ -14,7 +14,7 @@
   <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <script type="text/javascript">
-    var currentStrategy = MARGIN_WINS_ID;
+    var currentStrategy = 2;
   </script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/AllTeams.js" "="" defer=""></script>
