add matches manually via webapp

--- a/Goals-Fest.html
+++ b/Goals-Fest.html
@@ -19,6 +19,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/GoalsFest.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/common/moment.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/InsertMatches.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/AllTeams.js" defer=""></script>
   <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
@@ -266,6 +267,7 @@
     </script>
 
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <a onclick="newMatchManuallyModalBox(GOALS_FEST_PATH)" style="margin-top: 30px;">Insert Match manually</a>
       <div class="u-align-center u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-container-style u-list-item u-repeater-item">
