--- a/MarginWinsHistoricStats.html
+++ b/MarginWinsHistoricStats.html
@@ -87,9 +87,9 @@
                       href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
                   </li>
                   <li class="u-nav-item"><a
-                    class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                    href="Goals-Fest.html" style="padding: 10px;">Goals Fest</a>
-                </li>
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Goals-Fest.html" style="padding: 10px;">Goals Fest</a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -127,8 +127,8 @@
                           style="padding: 10px 20px;">2,5 Goal Lines</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Goals-Fest.html"
-                        style="padding: 10px 20px;">Goals Fest</a>
-                    </li>
+                          style="padding: 10px 20px;">Goals Fest</a>
+                      </li>
                     </ul>
                   </div>
                 </li>
@@ -175,14 +175,22 @@
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 40px;">
-              <th onclick="sortTable(0,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">SEASON</th>
-              <th onclick="sortTable(1,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Competition</th>
-              <th onclick="sortTable(2,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">% wins</th>
-              <th onclick="sortTable(3,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">total wins</th>
-              <th onclick="sortTable(4,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">% margin wins</th>
-              <th onclick="sortTable(5,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">total margin wins</th>
-              <th onclick="sortTableNumbers(6,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">std dev</th>
-              <th onclick="sortTableNumbers(7,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">coeff dev</th>
+              <th onclick="sortTable(0,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
+                SEASON</th>
+              <th onclick="sortTable(1,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
+                Competition</th>
+              <th onclick="sortTable(2,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
+                % wins</th>
+              <th onclick="sortTable(3,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
+                total wins</th>
+              <th onclick="sortTable(4,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
+                % margin wins</th>
+              <th onclick="sortTable(5,'mwStatsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
+                total margin wins</th>
+              <th onclick="sortTableNumbers(6,'mwStatsTable')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">std dev</th>
+              <th onclick="sortTableNumbers(7,'mwStatsTable')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">coeff dev</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">no margin-wins sequence</th>
             </tr>
           </thead>
