--- a/Margin-Wins.html
+++ b/Margin-Wins.html
@@ -20,6 +20,7 @@
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/MarginWins.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/common/moment.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/InsertMatches.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/AllTeams.js" defer=""></script>
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
@@ -270,6 +271,7 @@
   </script>
 
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <a onclick="newMatchManuallyModalBox(MARGIN_WINS_PATH)" style="margin-top: 30px;">Insert Match manually</a>
       <div class="u-align-center u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-container-style u-list-item u-repeater-item">
