--- a/Draws-Hunter.html
+++ b/Draws-Hunter.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <title>Draws Hunter</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon-logo-no-background.png">
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/StrategyPage.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
@@ -350,6 +351,10 @@
             <tr >
               <th class="u-table-cell" style="background-color: #dadcb9;"></th>
               <th class="u-table-cell" style="background-color: #e5e5e5; color: black;">inserted team waiting for a decent no-draw sequence
+            </tr>
+            <tr >
+              <th class="u-table-cell" style="background-color: #d5a23b;"></th>
+              <th class="u-table-cell" style="background-color: #e5e5e5; color: black;">team currently in an huge no-draw sequence
             </tr>
           </thead>
         </table>
