--- a/TeamInfoPage.html
+++ b/TeamInfoPage.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <title class="teamNameTitle"></title>
+  <link rel="icon" type="image/x-icon" href="images/favicon-logo-no-background.png">
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/Team-Info-Page.css" media="screen">
   <link rel="stylesheet" href="css/StrategyPage.css" media="screen">
