improve stats tables && go back buttons

--- a/Bets-Page.html
+++ b/Bets-Page.html
@@ -165,7 +165,7 @@
     <div class="u-clearfix u-sheet u-sheet-1"
       style="max-width:55%; max-height:55%; margin-top: 10%; margin-bottom: 5%;">
       <span class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" style="margin-top: 0;"
-        onclick="history.back()"><img src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
+      onclick="Javascript:history.go ( -1); Location.reload ()"><img src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
       <h4 class="u-text u-text-default u-text-1 bankrollNameTitle" style="text-shadow: none; margin-top: 4%; margin-bottom: 4%;"></h4>
       <div class="u-border-1 u-border-grey-75 u-container-style u-group u-radius-30 u-shape-round u-white u-group-1">
         <div class="u-container-layout u-container-layout-1" style="
