--- a/EuroHandicapHistoricStats.html
+++ b/EuroHandicapHistoricStats.html
@@ -157,7 +157,7 @@
   </header>
   <section class="u-align-center u-clearfix u-grey-10 u-section-1" id="sec-e6e8">
     <div class="u-clearfix u-sheet u-sheet-1"><span
-        class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" onclick="history.back()"><img
+        class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" onclick="Javascript:history.go ( -1); Location.reload ()"><img
           src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
       <h4 class="u-text u-text-default u-text-1 teamNameTitle" style="text-shadow: none;"></h4>
       <img src="images/shooting-game.png" style="display: block; margin: 40px auto; width: 10%;">
