--- a/Goals-Fest.html
+++ b/Goals-Fest.html
@@ -179,6 +179,7 @@
             <select id="seasonSelect">
               <option value="all">All</option>
               <option value="2023">2023</option>
+              <option value="2023-24">2023/24</option>
             </select>
           </form>
         </div>
