--- a/Draws-Hunter.html
+++ b/Draws-Hunter.html
@@ -187,6 +187,7 @@
               <option value="2022">2022</option>
               <option value="2022-23">2022/23</option>
               <option value="2023">2023</option>
+              <option value="2023-24">2023/24</option>
             </select>
           </form>
         </div>
