--- a/TeamHistoricMatches.html
+++ b/TeamHistoricMatches.html
@@ -173,6 +173,7 @@
             <col width="20%">
             <col width="20%">
             <col width="10%">
+            <col width="10%">
             <col width="38%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
@@ -183,6 +184,8 @@
                 Home Team</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
                 Away Team</th>
+              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
+                HT Result</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
                 FT Result</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">
